--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     ],
     "license": "UNLICENSED",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.1",
         "cookie-parser": "^1.4.4",
         "cors": "^2.8.5",
@@ -23,6 +24,7 @@
         "has-keys": "^0.1.0",
         "helmet": "^3.21.2",
         "http-status": "^1.3.2",
+        "jsonwebtoken": "^8.5.1",
         "mandatoryenv": "^1.1.1",
         "module-alias": "^2.2.2",
         "mongodb": "^3.7.3",
