--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "class-transformer": "^0.5.1",
     "js-cookie": "^3.0.1",
     "prettier": "^2.6.1",
     "prop-types": "^15.8.1",
