--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "prettier": "^2.6.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-countdown-circle-timer": "^3.0.9",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
