--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.24.0",
     "class-transformer": "^0.5.1",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "prettier": "^2.6.1",
     "prop-types": "^15.8.1",
