--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "lottie-react": "^2.2.1",
     "prettier": "^2.6.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
