--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,8 +29,8 @@
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-responsive-carousel": "^3.2.23",
-    "react-router": "^4.0.0",
-    "react-router-dom": "^6.2.2",
+    "react-router": "6.0.0-alpha.5",
+    "react-router-dom": "6.0.0-alpha.5",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
