--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,6 @@
     "prettier": "^2.6.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
-    "react-countdown-circle-timer": "^3.0.9",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
@@ -32,6 +31,7 @@
     "react-router": "6.0.0-alpha.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-timer-hook": "^3.0.7",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
     "sass": "^1.49.9",
